<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/fab_margin"
    tools:context="com.bagirapp.bookstore.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/editable_label"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/product_name"
            style="@style/editText_style" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/editable_label"
            android:text="@string/price" />

        <EditText
            android:id="@+id/price"
            style="@style/editText_style"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/editable_label"
            android:text="@string/quantity" />

        <LinearLayout
            style="@style/editText_style">
            <Button
                android:id="@+id/decrease"
                android:layout_width="@dimen/crease_button_size"
                android:layout_height="@dimen/crease_button_size"
                android:text="-"/>

            <EditText
                android:id="@+id/quantity"
                android:layout_width="@dimen/crease_button_size"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="center"/>

            <Button
                android:id="@+id/increase"
                android:layout_width="@dimen/crease_button_size"
                android:layout_height="@dimen/crease_button_size"
                android:text="+"/>
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/editable_label"
            android:text="@string/supplier" />

        <Spinner
            android:id="@+id/supplier_name"
            style="@style/editText_style"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            style="@style/editable_label"
            android:text="@string/supplier_phone" />

        <EditText
            android:id="@+id/supplier_pone"
            style="@style/editText_style"
            android:inputType="phone" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/crease_button_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_delete"/>
        <Button
            android:id="@+id/orederButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_order"/>
    </LinearLayout>
</LinearLayout>
